@@ -1,7 +1,6 @@
 #ifndef LOCARNA_RNA_DATA_HH
 #define LOCARNA_RNA_DATA_HH
 
-#include <string>
 #include <iostream>
 
 #include "aux.hh"
